welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:-32: error: Unmatched closing brace '}' ignored here
	}
        ^Runner:-31: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Runner:-17: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^Runner:1: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^